# Java_6_Interpreter_in_C

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  valgrind.yml
jvm/include/: config.h  interpretedjvm.h
jvm/include/definition/: accessflags.h  attribute.h  classfile.h  codeattribute.h  constantpool.h  fieldinfo.h  integral_types.h  methodinfo.h
jvm/include/interpreter/: classloader.h  executioncontext.h  executionframe.h  instructionhelper.h  objectinstance.h  opcodes.h  sourcefileinfo.h
jvm/include/util/: allocator.h  bytereader.h  hex_utils.h  sourcefiledecoder.h  utf8_utils.h
jvm/src/: interpretedjvm.c
jvm/src/definition/: constantpool.c
jvm/src/interpreter/: classloader.c  executioncontext.c  executionframe.c  instructionhelper.c  objectinstance.c  opcodes.c  sourcefileinfo.c
jvm/src/util/: allocator.c  bytereader.c  hex_utils.c  sourcefiledecoder.c  utf8_utils.c
pgp/ex1/: tree.c
pgp/ex2/: anagram.c  concat.c  dynamic_array.c
